# rag_v2

./: 1.ipynb  README.md  chat_bot.ipynb  process_html.ipynb  pyproject.toml
rag/: entry.ipynb
rag_basic/: vector_store.ipynb
